Avoid overwrapping lines for high height screen

--- a/src/application.scss
+++ b/src/application.scss
@@ -136,7 +136,7 @@ a, img {
     color: $accent-color;
     text-align: center;
     font-size: 1.1vh;
-    line-height: 18px;
+    line-height: 1.6vh;
     letter-spacing: -0.5px;
     margin-bottom: 3vh;
     a {
